WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
289709
Crash under DocumentLoader::removePlugInStreamLoader(WebCore::ResourceLoader&)
https://bugs.webkit.org/show_bug.cgi?id=289709
Summary
Crash under DocumentLoader::removePlugInStreamLoader(WebCore::ResourceLoader&)
Chris Dumez
Reported
2025-03-13 09:04:53 PDT
Crash under DocumentLoader::removePlugInStreamLoader(WebCore::ResourceLoader&): ``` Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 WebCore 0x11ff54ddc WebCore::DocumentLoader::removePlugInStreamLoader(WebCore::ResourceLoader&) + 300 1 WebCore 0x11ffbcc70 WebCore::NetscapePlugInStreamLoader::didFail(WebCore::ResourceError const&) + 328 2 JavaScriptCore 0x11170fc14 WTF::RunLoop::performWork() + 524 3 JavaScriptCore 0x111710bc0 WTF::RunLoop::performWork(void*) + 36 ```
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2025-03-13 09:05:01 PDT
<
rdar://146732733
>
Chris Dumez
Comment 2
2025-03-13 09:07:16 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/42405
EWS
Comment 3
2025-03-13 13:12:26 PDT
Committed
292111@main
(058d1da05408): <
https://commits.webkit.org/292111@main
> Reviewed commits have been landed. Closing PR #42405 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug