Crash under DocumentLoader::removePlugInStreamLoader(WebCore::ResourceLoader&) https://bugs.webkit.org/show_bug.cgi?id=289709 rdar://146732733

Reviewed by Per Arne Vollan.

It looks like it was crashing when dereferencing `loader.identifier()`, which
is a std::optional and thus can be std::nullopt. To address the issue, I have
refactored the code so that we use a HashSet instead of a HashMap whose key
is a ResourceLoadIdentifier. Using a ResourceLoadIdentifier is risky and may
cause leaks since the ResourceLoader's ResourceLoadIdentifier gets can get
nulled out.

* Source/WebCore/loader/DocumentLoader.cpp:
(WebCore::cancelAll):
(WebCore::setAllDefersLoading):
(WebCore::DocumentLoader::addSubresourceLoader):
(WebCore::DocumentLoader::removeSubresourceLoader):
(WebCore::DocumentLoader::addPlugInStreamLoader):
(WebCore::DocumentLoader::removePlugInStreamLoader):
(WebCore::DocumentLoader::subresourceLoaderFinishedLoadingOnePart):
* Source/WebCore/loader/DocumentLoader.h:
* Source/WebCore/loader/mac/DocumentLoaderMac.cpp:
(WebCore::scheduleAll):
(WebCore::unscheduleAll):

Canonical link: https://commits.webkit.org/292111@main